--- a/backend/package.json
+++ b/backend/package.json
@@ -4,18 +4,23 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "start": "node src/index.js",
         "dev": "nodemon src/index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.13",
         "morgan": "^1.10.0"
     },
     "devDependencies": {
-        "nodemon": "^2.0.7"
+        "dotenv": "^8.2.0",
+        "nodemon": "^2.0.7",
+        "npm-check-updates": "^11.1.1"
     }
 }
